--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,6 @@
 <ngx-spinner
 bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-scale"
 ></ngx-spinner>
-
-
 <mat-sidenav-container>
   <!--<mat-sidenav  #sidenav role="navigation">
    <mat-nav-list>
@@ -67,15 +65,14 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-
         </ul>
      </div> -->
     </mat-toolbar>
-
+    
     <main>
-
-
-
+        <div class="stars"><div class="twinkling"></div></div>
         <router-outlet></router-outlet>
       <app-messages></app-messages>
-
+     
     </main>
-
+ 
   </mat-sidenav-content>
+  
 </mat-sidenav-container>
