main lading pages are fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,7 +67,7 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-
     </mat-toolbar>
     
     <main>
-        <div class="stars"><div class="twinkling"></div></div>
+        <!-- <div class="stars"><div class="twinkling"></div></div> -->
         <router-outlet></router-outlet>
       <app-messages></app-messages>
      
