--- a/src/app/film-details/film-details.component.html
+++ b/src/app/film-details/film-details.component.html
@@ -1,11 +1,11 @@
-<div class=""  fxLayout="column" fxFlex.xs="100%" fxLayoutWrap >
+<div  fxLayout="column" fxFlex.xs="100%" fxLayoutWrap >
         <div class="container sec-info">
                 <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="film">
                     <mat-card fxFlex="1200px" fxFlex.sm="100%" fxFlex.xs="100%">
                         <mat-card-title>Episode {{film.episode_id}}: {{ film.title }}</mat-card-title>
                         <mat-card-content>
                           <div fxLayout="column wrap" fxLayoutGap="40px">
-                                <div fxHide.lg fxLayout="row wrap">
+                                <div fxHide.lg fxHide.xl fxLayout="row wrap">
                                         <mat-card class="card my-card">
             
                                             <img mat-card-image src="{{film.img_url}}">
