--- a/src/app/peoples/peoples.component.html
+++ b/src/app/peoples/peoples.component.html
@@ -1,19 +1,26 @@
-<h2>Peoples</h2>
 
-<mat-form-field class="search-form">
+
+<!-- <mat-form-field class="search-form">
   <input matInput placeholder="Search Picture" type="text">
-</mat-form-field>
-<button button="submit" mat-raised-button color="primary">Search</button>
-<br>
-<mat-spinner [style.display]="loading ? 'block' : 'none'"></mat-spinner>
-
-<button (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
-  <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
-<div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
-  <mat-card class="card-picture" *ngFor="let people of peoples" >
+</mat-form-field> -->
+<!-- <button button="submit" mat-raised-button color="primary">Search</button>
+<br> -->
+<div fxLayoutAlign="center">
+    <h2>Peoples</h2>
+</div>
+<div fxLayout="row" fxLayoutGap="0.5%" class="btn-page">
+  <div> 
+      <button (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
+  </div>
+  <div>
+      <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
+  </div>
+</div>
+<div class="work" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
+    
+  <mat-card fxFlex.xs="100%" fxFlex.sm="30%" fxFlex.xl="17%" fxFlex.lg="17%"  class="card-picture card" *ngFor="let people of peoples" >
      <mat-card-title (click)="getPeopleDetails(people['url'])">{{people.name}}</mat-card-title>
     <mat-card-subtitle>Character</mat-card-subtitle>
-
     <img mat-card-image src="{{people.img_url}}" (click)="getPeopleDetails(people['url'])">
      <mat-card-actions>
 
