--- a/src/app/starship-details/starship-details.component.css
+++ b/src/app/starship-details/starship-details.component.css
@@ -23,7 +23,7 @@ margin-bottom: 0.5em;
 }
 
 
-@media only screen and (min-width: 37.50em) {
+/* @media only screen and (min-width: 37.50em) {
 .card {
   max-width: calc(50% - 20px);
 }
@@ -33,4 +33,26 @@ margin-bottom: 0.5em;
 .card {
   width: calc(33.33333% - 20px);
 }
+} */
+
+mat-card-content, mat-card-title, mat-card-actions {
+  text-align: center;
+
+}
+
+.MovieInfo
+{
+  width: 15%;
+}
+.sec-info
+{
+  margin-bottom: 20px;
+}
+.header-img{
+  width: 100px;
+  margin: 4px
+}
+.sm-card
+{
+  margin-bottom: 10px;
 }
