--- a/src/app/film-details/film-details.component.html
+++ b/src/app/film-details/film-details.component.html
@@ -74,7 +74,7 @@
                             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center" >
                               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let planet of film.f_planets">
                                   <mat-card class="card my-card sm-card">
-                                      <mat-card-subtitle><a  href="https://www.google.com.sg">{{planet.name}}</a></mat-card-subtitle>
+                                      <mat-card-subtitle><a  href="{{planet.url}}">{{planet.name}}</a></mat-card-subtitle>
 
                                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
                                        <img mat-card-image class="header-img" src="{{planet.img_url}}">
@@ -93,7 +93,7 @@
                             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let vehicle of film.f_vehicles">
                                   <mat-card class="card my-card sm-card">
-                                      <mat-card-subtitle><a  href="https://www.google.com.sg">{{vehicle.name}}</a></mat-card-subtitle>
+                                      <mat-card-subtitle><a  href="{{vehicle.url}}">{{vehicle.name}}</a></mat-card-subtitle>
 
                                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
                                        <img mat-card-image class="header-img" src="{{vehicle.img_url}}">
@@ -113,7 +113,7 @@
                             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let starship of film.f_starships">
                                   <mat-card class="card my-card sm-card">
-                                      <mat-card-subtitle><a  href="https://www.google.com.sg">{{starship.name}}</a></mat-card-subtitle>
+                                      <mat-card-subtitle><a  href="{{starship.url}}">{{starship.name}}</a></mat-card-subtitle>
 
                                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
                                        <img mat-card-image class="header-img" src="{{starship.img_url}}">
@@ -133,7 +133,7 @@
                             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let species of film.f_species">
                                   <mat-card class="card my-card sm-card">
-                                      <mat-card-subtitle><a  href="https://www.google.com.sg">{{species.name}}</a></mat-card-subtitle>
+                                      <mat-card-subtitle><a  href="{{species.url}}">{{species.name}}</a></mat-card-subtitle>
 
                                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
                                        <img mat-card-image  class="header-img" src="{{species.img_url}}">
