--- a/src/app/planet-details/planet-details.component.html
+++ b/src/app/planet-details/planet-details.component.html
@@ -57,7 +57,7 @@
               <mat-card-content>
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let character of planet.p_residents">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{character.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + planet.img_url + ')', 'background-size': 'cover'  }"></div> -->
                          <img mat-card-image src="{{character.img_url}}">
@@ -82,7 +82,7 @@
               <mat-card-content>
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let film of planet.p_films">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{film.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle><a  href="{{film.url}}">{{film.title}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + planet.img_url + ')', 'background-size': 'cover'  }"></div> -->
                          <img mat-card-image src="{{film.img_url}}">
