--- a/src/app/starship-details/starship-details.component.html
+++ b/src/app/starship-details/starship-details.component.html
@@ -66,7 +66,7 @@
               <mat-card-content>
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let character of starship.s_pilots">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{character.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + starship.img_url + ')', 'background-size': 'cover'  }"></div> -->
                          <img mat-card-image src="{{character.img_url}}">
@@ -91,7 +91,7 @@
               <mat-card-content>
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let film of starship.s_films">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{film.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle><a  href="{{film.url}}">{{film.title}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + starship.img_url + ')', 'background-size': 'cover'  }"></div> -->
                          <img mat-card-image src="{{film.img_url}}">
