--- a/src/app/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle-details/vehicle-details.component.html
@@ -61,7 +61,7 @@
               <mat-card-content>
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let character of vehicle.v_pilots">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{character.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + vehicle.img_url + ')', 'background-size': 'cover'  }"></div> -->
                          <img mat-card-image src="{{character.img_url}}">
@@ -86,7 +86,7 @@
               <mat-card-content>
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let film of vehicle.v_films">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="https://www.google.com.sg">{{film.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle><a  href="{{film.url}}">{{film.title}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + vehicle.img_url + ')', 'background-size': 'cover'  }"></div> -->
                          <img mat-card-image src="{{film.img_url}}">
