added avatar class in detail pages

--- a/src/app/planet-details/planet-details.component.html
+++ b/src/app/planet-details/planet-details.component.html
@@ -61,7 +61,7 @@
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + planet.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{character.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
 
                       </mat-card>
                       <!-- <mat-card class="card my-card">
@@ -88,7 +88,7 @@
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + planet.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{film.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}">
 
                       </mat-card>
                 </div>
