--- a/src/app/starship-details/starship-details.component.html
+++ b/src/app/starship-details/starship-details.component.html
@@ -69,7 +69,7 @@
                         <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{character.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
 
                       </mat-card>
                       <!-- <mat-card class="card my-card">
@@ -96,7 +96,7 @@
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + starship.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{character.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
 
                       </mat-card>
                       <!-- <mat-card class="card my-card">
@@ -123,7 +123,7 @@
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + starship.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{film.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}">
 
                       </mat-card>
                 </div>
