--- a/src/app/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle-details/vehicle-details.component.html
@@ -66,7 +66,7 @@
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + vehicle.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{character.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
 
                       </mat-card>
                       <!-- <mat-card class="card my-card">
@@ -93,7 +93,7 @@
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + vehicle.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img" src="{{film.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}">
 
                       </mat-card>
                 </div>
