--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -2,12 +2,12 @@
 <div fxLayoutAlign="center">
     <h2>Vechicles</h2>
 </div>
-<div fxLayout="row" fxLayoutGap="0.5%" class="btn-page">
-  <div> 
-      <button (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
+<div fxLayout="row" fxLayoutGap="0.5%" class="btn-page" *ngIf="list">
+  <div>
+      <button [disabled]="(list['previous'] == null)" (click)="goPrevious()"  color="primary" mat-raised-button>PREVIOUS</button>&nbsp;
   </div>
   <div>
-      <button (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
+      <button [disabled]="(list['next'] == null)" (click)="goNext()"  color="primary" mat-raised-button>NEXT</button>
   </div>
 </div>
 <div class="work" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" >
