--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,7 @@ body {
   border-radius: 50%;
   flex-shrink: 0;
   object-fit: cover;
+  margin: auto !important;
 }
 /* ============================================================================================== 
 SED Innovations
